--- a/src/main/java/com/example/connector/http/LocalStrings.properties
+++ b/src/main/java/com/example/connector/http/LocalStrings.properties
@@ -15,7 +15,7 @@
 
 coyoteAdapter.accesslogFail=Exception while attempting to add an entry to the access log
 coyoteAdapter.asyncDispatch=Exception while processing an asynchronous request
-coyoteAdapter.authenticate=Authenticated user [{0}] provided by connector
+coyoteAdapter.authenticate=Authenticated user [{0}] provided by httpConnector
 coyoteAdapter.authorize=Authorizing user [{0}] using Tomcat''s Realm
 coyoteAdapter.checkRecycled.request=Encountered a non-recycled request and recycled it forcedly.
 coyoteAdapter.checkRecycled.response=Encountered a non-recycled response and recycled it forcedly.
@@ -23,7 +23,7 @@ coyoteAdapter.debug=The variable [{0}] has value [{1}]
 coyoteAdapter.nullRequest=An asynchronous dispatch may only happen on an existing request
 
 coyoteConnector.invalidEncoding=The encoding [{0}] is not recognised by the JRE. The Connector will continue to use [{1}]
-coyoteConnector.invalidPort=The connector cannot start since the specified port value of [{0}] is invalid
+coyoteConnector.invalidPort=The httpConnector cannot start since the specified port value of [{0}] is invalid
 coyoteConnector.notAsciiSuperset=The encoding [{0}] is not a superset of ASCII as required by RFC 7230. This may have unexpected side effects
 coyoteConnector.parseBodyMethodNoTrace=TRACE method MUST NOT include an entity (see RFC 2616 Section 9.6)
 coyoteConnector.protocolHandlerDestroyFailed=Protocol handler destroy failed
@@ -44,17 +44,17 @@ coyoteRequest.alreadyAuthenticated=This request has already been authenticated
 coyoteRequest.attributeEvent=Exception thrown by attributes event listener
 coyoteRequest.authenticate.ise=Cannot call authenticate() after the response has been committed
 coyoteRequest.changeSessionId=Cannot change session ID. There is no session associated with this request.
-coyoteRequest.chunkedPostTooLarge=Parameters were not parsed because the size of the posted data was too big. Because this request was a chunked request, it could not be processed further. Use the maxPostSize attribute of the connector to resolve this if the application should accept large POSTs.
+coyoteRequest.chunkedPostTooLarge=Parameters were not parsed because the size of the posted data was too big. Because this request was a chunked request, it could not be processed further. Use the maxPostSize attribute of the httpConnector to resolve this if the application should accept large POSTs.
 coyoteRequest.filterAsyncSupportUnknown=Unable to determine if any filters do not support async processing
 coyoteRequest.getContextPath.ise=Unable to find match between the canonical context path [{0}] and the URI presented by the user agent [{1}]
 coyoteRequest.getInputStream.ise=getReader() has already been called for this request
 coyoteRequest.getReader.ise=getInputStream() has already been called for this request
 coyoteRequest.gssLifetimeFail=Failed to obtain remaining lifetime for user principal [{0}]
-coyoteRequest.maxPostSizeExceeded=The multi-part request contained parameter data (excluding uploaded files) that exceeded the limit for maxPostSize set on the associated connector
+coyoteRequest.maxPostSizeExceeded=The multi-part request contained parameter data (excluding uploaded files) that exceeded the limit for maxPostSize set on the associated httpConnector
 coyoteRequest.noAsync=Unable to start async because the following classes in the processing chain do not support async [{0}]
 coyoteRequest.noMultipartConfig=Unable to process parts as no multi-part configuration has been provided
 coyoteRequest.parseParameters=Exception thrown whilst processing POSTed parameters
-coyoteRequest.postTooLarge=Parameters were not parsed because the size of the posted data was too big. Use the maxPostSize attribute of the connector to resolve this if the application should accept large POSTs.
+coyoteRequest.postTooLarge=Parameters were not parsed because the size of the posted data was too big. Use the maxPostSize attribute of the httpConnector to resolve this if the application should accept large POSTs.
 coyoteRequest.sendfileNotCanonical=Unable to determine canonical name of file [{0}] specified for use with sendfile
 coyoteRequest.sessionCreateCommitted=Cannot create a session after the response has been committed
 coyoteRequest.sessionEndAccessFail=Exception triggered ending access to session while recycling request
