--- a/webapps/testContext/WEB-INF/web.xml
+++ b/webapps/testContext/WEB-INF/web.xml
@@ -1,24 +1,38 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-
-<!DOCTYPE web-app
-    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-    "http://java.sun.com/dtd/web-app_2_3.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
-  <servlet>
-    <servlet-name>Modern</servlet-name>
-    <servlet-class>ModernServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>Primitive</servlet-name>
-    <servlet-class>PrimitiveServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Modern</servlet-name>
-    <url-pattern>/Modern</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>Primitive</servlet-name>
-    <url-pattern>/Primitive</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>Modern</servlet-name>
+        <servlet-class>ModernServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Primitive</servlet-name>
+        <servlet-class>PrimitiveServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Session</servlet-name>
+        <servlet-class>SessionServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ERR</servlet-name>
+        <servlet-class>com.example.servlet.ExceptionServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Modern</servlet-name>
+        <url-pattern>/servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Primitive</servlet-name>
+        <url-pattern>/pr</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ERR</servlet-name>
+        <url-pattern>/err</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Session</servlet-name>
+        <url-pattern>/session</url-pattern>
+    </servlet-mapping>
 </web-app>
